--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ deploy:
  provider: script
  skip_cleanup: true
  script:
-  - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ukaryukov:$BINTRAY_API_KEY "https://api.bintray.com/content/pavelkaryukov/otus/otus_1/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ukaryukov:$BINTRAY_API_KEY "https://api.bintray.com/content/karyukov/otus/otus_1/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
 #  provider: script
 #  skip_cleanup: true
+#curl -T helloworld-0.0.1-Linux.deb -ukaryukov:98d4f263c8ca245a3c36ac8bcf01cadfbf205569 "https://api.bintray.com/content/karyukov/otus/otus_1/1/helloworld-0.0.$1-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+
