-Проверка переменной TRAVIS_BUILD_NUMBER и установка дефотлтного значения в случае отсутсвия -link header к исполняемым файлам -убрал ошибку с перетиранием путей (set_target_propeties (INCLUDE_DIR) поменял на target_include_directories)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,31 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
+if (NOT DEFINED ENV{TRAVIS_BUILD_NUMBER})
+	set(ENV{TRAVIS_BUILD_NUMBER} 1) # не считается ли назначение TRAVIS_BUILD_NUMBER дурным тоном ?
+	message("Failed to find ENV TRAVIS_BUILD_NUMBER, set default value = 1")
+endif()
+
 project ("Otus_1" VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER}) 
 
 configure_file (configure_version.h.in
 	${CMAKE_CURRENT_BINARY_DIR}/configure_version.h
 )
-set (SOURCES "otus_1.cpp" "version.cpp")
-set (HEADERS "version.h" "configure_version.h")
-add_executable(Otus_1 ${SOURCES})
+set (MAIN_SRC "otus_1.cpp" )
+set (VERSION_SRC "version.cpp" "version.h" "configure_version.h")
+
+add_executable(Otus_1 ${MAIN_SRC} ${VERSION_SRC}) 
 
 set_target_properties (
 	Otus_1 PROPERTIES 
 	CXX_STANDARD 17 
 	CXX_STANDARD_REQUIRED ON	
 )
+
 target_include_directories(
 	Otus_1 
 	PRIVATE
 	${CMAKE_CURRENT_BINARY_DIR}
 )
-
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
@@ -30,19 +36,20 @@ else()
 	include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
-add_executable(test_version "test_version.cpp" "version.cpp")
+add_executable(boost_test_version "boost_test_version.cpp" ${VERSION_SRC} )
 
 set_target_properties (
-	test_version PROPERTIES 
+	boost_test_version PROPERTIES 
 	CXX_STANDARD 17 
 	CXX_STANDARD_REQUIRED ON	
 )
 target_include_directories(
-	test_version 
+	boost_test_version 
 	PRIVATE
 	${CMAKE_CURRENT_BINARY_DIR}
+	${Boost_INCLUDE_DIR}
 )
-target_link_libraries(test_version
+target_link_libraries(boost_test_version
     ${Boost_LIBRARIES}
 )
 
@@ -50,24 +57,20 @@ if (MSVC)
     target_compile_options(Otus_1 PRIVATE
         /W4
     )
-    target_compile_options(test_version PRIVATE
+    target_compile_options(boost_test_version PRIVATE
         /W4
     )
 else ()
     target_compile_options(Otus_1 PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
-    target_compile_options(test_version PRIVATE
+    target_compile_options(boost_test_version PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
-endif()
-
-if (NOT MSVC)
-   set_target_properties( test_version PROPERTIES
+	set_target_properties( boost_test_version PROPERTIES
 		COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-		INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
 	)
 endif()
 
 enable_testing()
-add_test(test_version test_version)
+add_test(boost_test_version boost_test_version)
