--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ script:
 - cmake --build . --target Otus_1
 - ./Otus_1
 - ./boost_test_version
+- cmake --build . --target package
+- ls
 deploy:
  provider: script
  skip_cleanup: true																			 
