--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,12 @@ target_include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}
 )
 
+#Boost Test
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 if(NOT Boost_FOUND)
 	message(SEND_ERROR "Failed to find boost")
 	return()
-else()	 
-	include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
 add_executable(boost_test_version "boost_test_version.cpp" ${VERSION_SRC} )
@@ -53,11 +52,40 @@ target_link_libraries(boost_test_version
     ${Boost_LIBRARIES}
 )
 
+#Google Test
+find_package(GTest REQUIRED)
+
+if(NOT GTEST_FOUND )
+	message(SEND_ERROR "Failed to find GTest")
+	return()
+endif()
+
+add_executable(gtest_test_version "gtest_test_version.cpp" ${VERSION_SRC} )
+set_target_properties (
+	gtest_test_version PROPERTIES 
+	CXX_STANDARD 14
+	CXX_STANDARD_REQUIRED ON	
+)
+
+
+target_link_libraries(gtest_test_version ${GTEST_BOTH_LIBRARIES} )
+
+target_include_directories(
+	gtest_test_version 
+	PRIVATE
+	${CMAKE_CURRENT_BINARY_DIR}
+	${GTEST_INCLUDE_DIRS}
+)
+
+
 if (MSVC)
     target_compile_options(Otus_1 PRIVATE
         /W4
     )
     target_compile_options(boost_test_version PRIVATE
+        /W4
+    )
+	target_compile_options(gtest_test_version PRIVATE
         /W4
     )
 else ()
@@ -70,8 +98,16 @@ else ()
 	set_target_properties( boost_test_version PROPERTIES
 		COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
 	)
+    target_compile_options(gtest_test_version PRIVATE
+        -Wall -Wextra -pedantic -Werror
+    )
 endif()
 
+enable_testing()
+add_test(boost_test_version boost_test_version)
+add_test(gtest_test_version gtest_test_version)
+
+#Сборка пакета
 install(TARGETS Otus_1 DESTINATION bin)
 set(CPACK_PACKAGE_NAME "OtusHomework_1")
 set(CPACK_GENERATOR DEB)
@@ -81,5 +117,3 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_VENDOR "Karyukov")
 set(CPACK_PACKAGE_CONTACT "pavelkaryukov@gmail.com")
 include (CPack)
-enable_testing()
-add_test(boost_test_version boost_test_version)
